--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,11 +2,19 @@
 <resources>
     <string name="startTime">00:00</string>
     <string name="currentQuestion">0 / 10</string>
-    <string name="textBackBtn">back</string>
-    <string name="textSkipBtn">skip</string>
-    <string name="textNextBtn">next</string>
+    <string name="textBackBtn">Предидущий</string>
+    <string name="textNextBtn">Следующий</string>
     <string name="titleResultTest">Результат теста:</string>
     <string name="scoreTest">0</string>
-    <string name="textRestartBtn">restart</string>
+    <string name="textRestartBtn">Повторить</string>
     <string name="textGoToMenuBtn">В меню</string>
+    <string name="title_menuMain">Меню</string>
+    <string name="title_menuResult">Результаты</string>
+    <string name="title_menuStartTest">Пройти тест</string>
+    <string name="title_menuSetting">Настройки</string>
+    <string name="title_HeadNavMenu">Контакты</string>
+    <string name="title_support">Поддержка</string>
+    <string name="textdata">Дата:</string>
+    <string name="textScores">Баллы:</string>
+    <string name="versionApp">v. 0.0.16</string>
 </resources>
