--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="login_unsuccessful_msg">Вход не выполнен</string>
     <string name="login_successful_msg">Вход успешно выполнен</string>
     <string name="startTime">00:00</string>
-    <string name="currentQuestion">0 / 10</string>
+    <string name="currentQuestion">0 / 20</string>
     <string name="textBackBtn">Предыдущий</string>
     <string name="textNextBtn">Следующий</string>
     <string name="titleResultTest">Результат теста:</string>
@@ -22,5 +22,11 @@
     <string name="title_support">Поддержка</string>
     <string name="textdata">Дата:</string>
     <string name="textScores">Баллы:</string>
-    <string name="versionApp">v. 0.0.16</string>
+    <string name="versionApp">v. 0.0.17</string>
+    <string name="viewErrors">Просмотр ошибок</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="titleMyResult">Мои результаты</string>
+    <string name="titleUserAnswerList">Ваши ответы</string>
+    <string name="titleYourAnswer">Ваш ответ:</string>
+    <string name="TitleCorrectAnswer">Правильный ответ</string>
 </resources>
